--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,12 @@
 extends layout
 
+
 block content
   h1= title
-  p Welcome to #{title}
+  a(href='/new')='add message'
+  each message in messages
+    section
+      p=message.text
+    footer
+      p=message.user
+      p=message.added
