--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,5 +4,38 @@ body {
 }
 
 a {
-  color: #00B7FF;
+  display: inline-block;
+  padding: 1rem;
+  border-radius: 10px;
+  text-decoration: none;
+  font-weight: 600;
+  box-shadow: 0px 3px 15px rgba(0,0,0,0.4);
+  color: #6e2594;
+}
+section{
+  box-shadow: 0px 3px 15px rgba(0,0,0,0.4);
+  border-radius: 10px;
+  padding: 1rem;
+  margin: 1rem 0;
+}
+form{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+textarea,input{
+  border:none;
+  border-radius: 10px;
+  margin: 1rem 0;
+  padding: 1rem;
+  box-shadow: 0px 3px 15px rgba(0,0,0,0.4);
+}
+input[type='submit']{
+  width: 10%;
+  color: #6e2594;
+  font-size: 1rem;
+  cursor: pointer;
+  background: white;
+  font-weight: 600;
 }
